[project]
name = "kubectl-ng"
dynamic = ["version"]
description = ""
authors = [{ name = "Jacob Tomlinson", email = "jacob@tomlinson.email" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.12", "rich>=13.3.2", "kr8s==0.20.8"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-kind>=22.11.1",
    "pytest-timeout>=2.2.0",
    "pytest-rerunfailures>=13.0",
    "pytest-cov>=4.1.0",
    "trio>=0.23.2",
    "kubernetes-validate>=1.28.3",
]

[project.scripts]
kubectl-ng = "kubectl_ng.cli:go"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubectl_ng"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "kubectl_ng/__version.py"

[tool.hatch.version.raw-options]
root = "../../"
